# PhantomRacer

./: CMakeLists.txt  bitboard.h  board.h  color.h  game.h  intro.h  main.cpp  move.h  test.h  types.h
strategy/: mcts.h  minimax.h  random.h  strategy.h
